
1.2
- fixed dialog display issue on image preview
- changed "delete" dialog to yes/no

1.1
- improved code for taking and loading pictures from the gallery
- handles image rotation on import better
- prompts to delete original on save
- saves in proper place in the Gallery

1.0.3
- Trying out a change to the realtime preview to disable it while actually editing a region.  When region is manipulated it is off, when done, it is back on.  Much more respon
- Fixed a divide by zero bug if the region is too small

1.0.2
- new mask graphic
- fixed corner selection size
- added white border around deselected region
- added back in preview
- added padding around face detection area to expand it a bit
- made detection automatic

1.0.1
- fixed region corners
- fixed facial detection region size

1.0.0
- in the market!