@@ -1,0 +1,5 @@
+
+This project requires:
+
+- Android Software Development Kit
+- Android Native Development Kit
